	PR ld/15222 ld/ 	* ldlang.c (lang_size_sections_1): When given an lma_region align 	LMA as per VMA only if lma_region is the same as region. ld/testsuite/ 	* ld-scripts/rgn-at6.s, * ld-scripts/rgn-at6.t, * ld-scripts/rgn-at6.d, 	* ld-scripts/rgn-at7.t, * ld-scripts/rgn-at7.d: New tests.